bomc-kustomize-config/base/030-postgres-dc-base.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: 172.30.1.1:5000/bomc/postgres:v9.6.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
