bomc-kustomize-config/base/040-postgres-dc-base.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    app: postgres
    deploymentconfig: postgres
  template:
    metadata:
      labels:
        app: postgres
        deploymentconfig: postgres
    spec:
      containers:
      - name: postgres
        image: 172.30.1.1:5000/openshift/postgresql@sha256:617c75aab798753ee5e0323d60069757b17a2255abd9de44ca342e4a8bb68b15
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
          protocol: TCP
