bomc-kustomize-config/base/050-postgres-svc-base.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: 5432-tcp
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres
    deploymentconfig: postgres
